# agentarts-sdk-python

./: .agentarts_config.yaml  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: publish.yml
agentarts/toolkit/: main.py
agentarts/toolkit/cli/: __init__.py
agentarts/toolkit/cli/mcp_gateway/: __init__.py  mcp_gateway.py
agentarts/toolkit/cli/runtime/: __init__.py  build.py  config.py  deploy.py  dev.py  init.py
agentarts/toolkit/operations/: __init__.py
agentarts/toolkit/operations/mcp_gateway/: __init__.py
agentarts/toolkit/operations/runtime/: __init__.py  build.py  config.py  deploy.py  dev.py  init.py
agentarts/toolkit/utils/: __init__.py
agentarts/toolkit/utils/runtime/: __init__.py  config.py
agentarts/toolkit/utils/templates/autogen/: __init__.py
agentarts/toolkit/utils/templates/basic/: __init__.py
agentarts/toolkit/utils/templates/langchain/: __init__.py
agentarts/wrapper/: __init__.py  py.typed
agentarts/wrapper/integration/: __init__.py
agentarts/wrapper/integration/langgraph/: __init__.py
agentarts/wrapper/integration/strands_with_tools/: example.py  requirements.txt
agentarts/wrapper/mcpgateway/: __init__.py  mcp_gateway_client.py
agentarts/wrapper/memory/: __init__.py
agentarts/wrapper/runtime/: __init__.py  app.py  context.py
agentarts/wrapper/service/: __init__.py  http_client.py  iam_client.py  runtime_client.py  tools_http.py
agentarts/wrapper/tools/: __init__.py
agentarts/wrapper/tools/code_interpreter/: __init__.py  code_interpreter_client.py
agentarts/wrapper/utils/: constant.py  metadata.py
docs/: cloud_tools_user_guide.md
docs/cn/sdk_user_guide/: agent_identity_guide.md  environment_variables.md  mcp_gateway_user_guide.md  memory_user_guide.md  runtime_user_guide.md  tools_user_guide.md
docs/cn/toolkit_user_guide/: config.md  deploy.md  dev.md  init.md  invoke.md  mcp_gateway_cli.md  status.md
examples/: README.md
examples/agent_tools/: README.md  integrate_tools.py  requirements.txt
examples/integration/langchain/: README.md  langchain_agent.py  requirements.txt
examples/integration/langgraph/: README.md  langgraph_agent.py  requirements.txt
examples/sdk/agent_identity/: api_key_example.ipynb  client_manual_example.ipynb  context_usage_example.ipynb  oauth2_example.ipynb  pyproject.toml  sts_token_example.ipynb  utility_tools.ipynb
examples/sdk/basic_agent/: README.md  agent.py  requirements.txt
examples/sdk/code_interpreter/: README.md  code_interpreter_agent.py
examples/sdk/memory_service/: README.md  agent_with_memory.py
examples/toolkit/cli_usage/: README.md  cli_examples.py
libs/huaweicloudsdkagentidentity/: pyproject.toml
libs/huaweicloudsdkagentidentity/src/huaweicloudsdkagentidentity/v1/: __init__.py  agentidentity_async_client.py  agentidentity_client.py
libs/huaweicloudsdkagentidentity/src/huaweicloudsdkagentidentity/v1/model/: create_workload_access_token_for_jwt_response.py  create_workload_access_token_response.py  get_resource_api_key_response.py  get_resource_oauth2_token_request_body.py  get_resource_sts_token_request_body.py  github_oauth2_provider_config_input.py  google_oauth2_provider_config_input.py  microsoft_oauth2_provider_config_input.py  update_api_key_credential_provider_req_body.py
src/agentarts/: __init__.py
src/agentarts/sdk/: __init__.py
src/agentarts/sdk/identity/: __init__.py  auth.py  config.py  types.py
src/agentarts/sdk/integration/: __init__.py
src/agentarts/sdk/integration/langgraph/: converter.py  saver.py
src/agentarts/sdk/mcpgateway/: mcp_gateway_client.py
src/agentarts/sdk/memory/: __init__.py  client.py
src/agentarts/sdk/memory/inner/: __init__.py  config.py  controlplane.py  dataplane.py
src/agentarts/sdk/runtime/: __init__.py  context.py  model.py
src/agentarts/sdk/service/: __init__.py  http_client.py  iam_client.py  memory_service.py  runtime_client.py  swr_client.py  tools_http.py
src/agentarts/sdk/service/identity/: identity_client.py
src/agentarts/sdk/tools/: __init__.py
src/agentarts/sdk/utils/: __init__.py  common.py  constant.py  metadata.py
src/agentarts/toolkit/: __init__.py  main.py
src/agentarts/toolkit/cli/: logs.py
src/agentarts/toolkit/cli/memory/: commands.py
src/agentarts/toolkit/utils/: common.py
src/huaweicloudsdkagentidentity/v1/model/: __init__.py  api_key_info.py  create_api_key_credential_provider_req_body.py  create_workload_access_token_for_user_id_response.py  custom_oauth2_provider_config_input.py  get_resource_api_key_request_body.py  get_resource_oauth2_token_response.py  get_resource_sts_token_response_body_credentials.py  rich_authorization_detail.py
src/huaweicloudsdkagentidentity/v1/region/: agentidentity_region.py
src/hw_agentrun_toolkit/cli/: cli.py
src/hw_agentrun_toolkit/operations/memory/: __init__.py
tests/: __init__.py  conftest.py
tests/e2e/: __init__.py
tests/hw_agentrun_toolkit/cli/memory/: test_commands.py
tests/hw_agentrun_toolkit/operations/memory/: test_models.py  test_space.py
tests/integration/: test_runtime_app.py
tests/unit/sdk/: test_core.py
tests/unit/sdk/integration/: test_langgraph.py
tests/unit/sdk/mcpgateway/: test_mcp_gateway_http.py  test_mcp_target_http.py
tests/unit/sdk/memory/: test_memory.py
tests/unit/sdk/runtime/: __init__.py  test_app.py
tests/unit/sdk/service/: test_http_client.py  test_iam_client.py  test_tools_http.py
tests/unit/sdk/tools/: test_code_interpreter_cient.py  test_code_interpreter_client.py  test_tools.py
tests/unit/sdk/utils/: test_common.py  test_constant.py
tests/unit/toolkit/: __init__.py
tests/unit/wrapper/: __init__.py  test_core.py
tests/unit/wrapper/mcpgateway/: test_mcp_gateway_http.py  test_mcp_target_http.py
tests/unit/wrapper/memory/: test_memory.py
tests/unit/wrapper/runtime/: test_app.py
tests/unit/wrapper/service/: test_http_client.py  test_iam_client.py  test_tools_http.py
tests/unit/wrapper/tools/: test_tools.py
tests/unit/wrapper/utils/: test_common.py  test_constant.py
(+39 files in other folders)
