[build-system]
requires = ["uv_build>=0.9.27,<0.10.0"]
build-backend = "uv_build"

[project]
name = "huaweicloud-agentarts-sdk"
version = "0.1.0"
description = "Huawei Cloud AgentArts SDK - Build, deploy and manage AI agents with cloud capabilities"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Huawei Cloud AgentArts Team", email = "agentarts@huawei.com"}
]
maintainers = [
    {name = "Huawei Cloud AgentArts Team", email = "agentarts@huawei.com"}
]
keywords = [
    "agent",
    "ai",
    "llm",
    "langchain",
    "langgraph",
    "autogen",
    "crewai",
    "huawei-cloud",
    "sdk",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
requires-python = ">=3.10"
dependencies = [
    "huaweicloudsdkcore>=3.1.0",
    "huaweicloudsdkiam>=3.1.0",
    "huaweicloudsdkswr>=3.1.0",
    "fastapi>=0.104.0",
    "starlette>=0.46.2",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.10.0,<2.13.0",
    "pydantic-settings>=2.6.0,<2.9.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "tenacity>=8.2.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pyjwt>=2.8.0",
    "cryptography>=41.0.0",
    "docker>=7.0.0",
]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.5.0",
    "pre-commit>=3.5.0",
    "types-PyYAML>=6.0.0",
    "types-redis>=4.6.0",
    "ruff>=0.1.0",
    "ty>=0.0.14",
]

[project.optional-dependencies]
langchain = [
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
    "langchain-community>=0.0.10",
]
langgraph = [
    "langgraph>=0.0.20",
    "langchain>=0.1.0",
]
autogen = [
    "pyautogen>=0.2.0",
]
crewai = [
    "crewai>=0.1.0",
]
vector-stores = [
    "pymilvus>=2.3.0",
]
database = [
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "redis>=5.0.0",
]
monitoring = [
    "prometheus-client>=0.19.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-instrumentation-fastapi>=0.41b0",
]
huaweicloud = [
    "huaweicloudsdkswr>=3.1.0",
    "huaweicloudsdkobs>=3.1.0",
]
docs = [
    "sphinx>=7.2.0",
    "sphinx-rtd-theme>=1.3.0",
    "myst-parser>=2.0.0",
]
all = [
    "huaweicloud-agentarts-sdk[langchain,langgraph,autogen,crewai,vector-stores,database,monitoring,huaweicloud,dev,docs]",
]

[project.urls]
Homepage = "https://github.com/huaweicloud/agentarts-sdk-python"
Documentation = "https://docs.huaweicloud.com/agentarts"
Repository = "https://github.com/huaweicloud/agentarts-sdk-python"
Issues = "https://github.com/huaweicloud/agentarts-sdk-python/issues"
Changelog = "https://github.com/huaweicloud/agentarts-sdk-python/blob/main/CHANGELOG.md"

[project.scripts]
agentarts = "agentarts.toolkit.main:cli"

[tool.uv.build-backend]
module-name = ["agentarts", "huaweicloudsdkagentidentity"]
module-root = "src"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312", "py313"]
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | migrations
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_gitignore = true
skip = [".git", ".hg", ".mypy_cache", ".tox", ".venv", "_build", "buck-out", "build", "dist", "migrations"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
strict_concatenate = true
show_error_codes = true
show_column_numbers = true
show_error_context = true
pretty = true

[[tool.mypy.overrides]]
module = [
    "docker.*",
    "langchain.*",
    "langgraph.*",
    "autogen.*",
    "crewai.*",
    "milvus.*",
    "pymilvus.*",
    "huaweicloudsdkcore.*",
    "huaweicloudsdkmodelarts.*",
    "huaweicloudsdkiam.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--strict-config",
]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "e2e: marks tests as end-to-end tests",
    "asyncio: marks tests as async tests",
]

[tool.coverage.run]
source = ["agentarts"]
branch = true
parallel = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.paths]
source = ["src/agentarts"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    "@abstractmethod",
    "@abc.abstractmethod",
]
show_missing = true
precision = 2

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "N",
    "W",
    "UP",
    "B",
    "C4",
    "DTZ",
    "T10",
    "EM",
    "EXE",
    "ISC",
    "ICN",
    "G",
    "INP",
    "PIE",
    "PYI",
    "PT",
    "Q",
    "RSE",
    "RET",
    "SLF",
    "SLOT",
    "SIM",
    "TID",
    "TCH",
    "ARG",
    "PTH",
    "PL",
    "TRY",
    "NPY",
    "RUF",
]
ignore = [
    "E501",
    "PLR0913",
    "TRY003",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG", "S101"]
"__init__.py" = ["F401"]

[tool.uv.workspace]
members = ["examples/sdk/*"]

[tool.uv.sources]
