[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "huaweicloudsdkagentidentity"
version = "3.1.184"
description = "Huawei Cloud AgentIdentity SDK"
readme = "README.md"
requires-python = ">=3.6"
license = {text = "Apache-2.0"}
dependencies = [
    "huaweicloudsdkcore>=3.1.184",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["huaweicloudsdkagentidentity*"]
